--- a/category.html
+++ b/category.html
@@ -42,7 +42,7 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">
-                            <img src="/images/nederburg.jpg" alt="" width="100%" height="200%">
+                            <img src="images/nederburg.jpg" alt="" width="100%" height="200%">
                         </div>
                         <!-- card footer -->
                         <div class="card-footer">
@@ -61,7 +61,7 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">
-                            <img src="/images/nederburg rose.jpg" alt="" width="100%" height="200%">
+                            <img src="images/nederburg rose.jpg" alt="" width="100%" height="200%">
                         </div>
                         <!-- card footer -->
                         <div class="card-footer">
@@ -80,7 +80,7 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">
-                            <img src="/images/barrone.webp" alt="" height="310">
+                          <img src="images/barrone.webp" alt="" width="100%" height="370">
                         </div>
                         <!-- card footer -->
                         <div class="card-footer">
@@ -107,7 +107,7 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">
-                            <img src="/images/black-label.jpg" alt="" width="100%" height="200%">
+                            <img src="images/black-label.jpg" alt="" width="100%" height="200%">
                             <p>it is a premium blended Scotch whisky known for its depth,balance,and smooth character.</p>
                         </div>
                         <!-- card footer -->
@@ -126,7 +126,7 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">
-                            <img src="/images/gallery6.jpg" alt="" width="100%" height="200px">
+                            <img src="images/gallery6.jpg" alt="" width="100%" height="200px">
                             <p>its more than a drink- its a legacy. crafted with time-honoured tradition and charcoal melloewed drop by drop</p>
                         </div>
                         <!-- card footer -->
@@ -145,7 +145,7 @@
                             <h6>jameson irish whisky</h6>
                          </div>
                         <div class="card-body">
-                            <img src="/images/drink1.jpg" alt=""  width="100%" height="200px">
+                            <img src="images/drink1.jpg" alt=""  width="100%" height="200px">
                             <p>light,smooth and approachable.Subtle notes of vanilla,honey, and toasted wood makeit easyto enjoy neator mixed</p>
                         </div>
                         <!-- card body -->
@@ -175,7 +175,7 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">
-                            <img src="/images/drink2.jpg" alt="" width="100%">
+                            <img src="images/drink2.jpg" alt="" width="100%">
                             <p>It is well known for its white rum, which is clean,light, and mild taste</p>
                         </div>
                         <!-- card footer -->
@@ -194,7 +194,7 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">
-                            <img src="/images/morgan.jpg" alt="" width="100%" height="200px">
+                            <img src="images/morgan.jpg" alt="" width="100%" height="200px">
                             <p>captain morgan is a spicedrum which is flavoured with vanilla,cinnamon, and other warm spices</p>
                         </div>
                         <!-- card footer -->
@@ -213,7 +213,7 @@
                         </div>
                         <!-- card body -->
                         <div class="card-body">
-                            <img src="/images/drink3.jpg" alt="" width="100%" height="200px">
+                            <img src="images/drink3.jpg" alt="" width="100%" height="200px">
                             <p>malibu is a sweet ,coconut-flavouredalcoholic drink made from rum. It has a smooth, creamy tropical taste</p>
                             <div >
                         </div>
@@ -247,13 +247,13 @@
             <div class="col-md-4">
                 <h2 class="text-dark text-center" style="color: #000;">Stay connected</h2><br>
                 <a href="https://www.facebook.com">
-                    <img src="/images/fb.png" alt="">
+                    <img src="images/fb.png" alt="">
                 </a>
                 <a href="https://www.instagram.com">
-                    <img src="/images/in.png" alt="">
+                    <img src="images/in.png" alt="">
                 </a>
                 <a href="https://www.x.com">
-                    <img src="/images/x.png" alt="">
+                    <img src="images/x.png" alt="">
                 </a><br>
                 <p>You can find us on Twitter, Facebook and instagram by clicking on the links above</p>
 
