--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                     <!-- the image wrapper starts here -->
                 <div class="carousel-inner" data-bs-ride="carousel">
                     <div class="carousel-item">
-                        <img src="/images/slide1.jpg" alt="" class="d-block w-100" width="500px" height="400px">
+                        <img src="images/slide1.jpg" alt="" class="d-block w-100" width="500px" height="400px">
                     </div>
                     <div class="carousel-item active">
-                        <img src="/images/slide2.jpg" alt="" class="d-block w-100" width="500px" height="400px"> 
+                        <img src="images/slide2.jpg" alt="" class="d-block w-100" width="500px" height="400px"> 
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/slide3.png" alt="" class="d-block w-100" width="500px" height="400px">
+                        <img src="images/slide3.png" alt="" class="d-block w-100" width="500px" height="400px">
                     </div>
                     
                 </div>
@@ -76,22 +76,22 @@
          <h1><u>Gallery</u></h1>
       <section class="row text-center">
             <div class="col-md-3">
-                <img src="/images/drink4.jpg" alt="" height="200px" width="200px">
+                <img src="images/drink4.jpg" alt="" height="200px" width="200px">
                 <p>It is well known for its white rum, which is clean,light, and mild taste</p>
             </div>
 
             <div class="col-md-3">
-                <img src="/images/drink1.jpg" alt="" height="200px" width="200px">
-                <p>Captain morgan is a spicedrum which is flavoured with vanilla,cinnamon, and other warm spices</p>
+                <img src="images/drink1.jpg" alt="" height="200px" width="200px">
+                <p>Tullamore is a spicedrum which is flavoured with vanilla,cinnamon, and other warm spices</p>
             </div>
             <div class="col-md-3">
-                <img src="/images/drink2.jpg" alt="" height="200px" width="200px">
+                <img src="images/drink2.jpg" alt="" height="200px" width="200px">
                 <p>Malibu is a sweet ,coconut-flavouredalcoholic drink made from rum. It has a smooth, creamy tropical taste</p>
                 
 
             </div>
             <div class="col-md-3">
-                <img src="/images/drink3.jpg" alt="200px" height="200px" width="200px">
+                <img src="images/drink3.jpg" alt="200px" height="200px" width="200px">
                 <p>Savory and spicy.Contains vodka with tomato juice,spices and garnishes(olive,celery,lemon)</p>
             </div>
 
@@ -101,7 +101,7 @@
         <section class="row text-center">
             <div class="col-md-3">
                 <h6></h6>
-                <img src="/images/drink4.jpg" alt="" width="200px" height="300px"><br>
+                <img src="images/drink4.jpg" alt="" width="200px" height="300px"><br>
                 <p>Hennessy x.o</p>
                 <b class="text-warning">ksh 65,000</b><br>
                 <span class="bg-danger badge">10%off</span>
@@ -109,7 +109,7 @@
 
             <div class="col-md-3">
                  <h6></h6>
-                <img src="/images/black-label.jpg" alt="" width="200px" height="300px"><br>
+                <img src="images/black-label.jpg" alt="" width="200px" height="300px"><br>
                 <p>Black label</p>
                 <b class="text-warning">ksh 58,000</b><br>
                 <span class="bg-danger badge">15%off</span>
@@ -117,7 +117,7 @@
 
             <div class="col-md-3">
                 <h6></h6>
-                <img src="/images/drink3.jpg" alt="" width="200px" height="300px"><br>
+                <img src="images/drink3.jpg" alt="" width="200px" height="300px"><br>
                 <p>Rangpur</p>
                 <b class="text-warning">ksh 72,000</b><br>
                 <span class="bg-danger badge">20%off</span>
@@ -125,7 +125,7 @@
 
             <div class="col-md-3">
                 <h6></h6>
-                <img src="/images/drink5.jpg" alt="" width="200px" height="300px"><br>
+                <img src="images/drink5.jpg" alt="" width="200px" height="300px"><br>
                 <p>Remy Martin</p>
                 <b class="text-warning">ksh 42,000</b><br>
                 <span class="bg-danger badge">12%off</span>
@@ -149,13 +149,13 @@
             <div class="col-md-4">
                 <h2 class="text-dark text-center" style="color: #000;">Stay connected</h2><br>
                 <a href="https://www.facebook.com">
-                    <img src="/images/fb.png" alt="">
+                    <img src="images/fb.png" alt="">
                 </a>
                 <a href="https://www.instagram.com">
-                    <img src="/images/in.png" alt="">
+                    <img src="images/in.png" alt="">
                 </a>
                 <a href="https://www.x.com">
-                    <img src="/images/x.png" alt="">
+                    <img src="images/x.png" alt="">
                 </a><br>
                 <p>You can find us on Twitter, Facebook and instagram by clicking on the links above</p>
 
