--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Fort Mall Restaurant</title>
         <link rel="stylesheet" href="css/bootstrap.css">
         <script src="js/bootstrap.js"></script>
+        <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
         <!-- section 1 starts -->
