--- a/category.html
+++ b/category.html
@@ -11,7 +11,7 @@
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-md navbar-light bg-danger">
                 <a href="#" class="navbar-brand">
-                    <b class="text-dark"><u>Fort Mall Meals</u></b>
+                    <b class="text-dark"><u>Fort Mall Drinks</u></b>
                 </a>
                 <!--navbar-->
                  <button class="navbar-toggler" data-bs-target="#navcollapse" data-bs-toggle="collapse">
